--- a/index.html
+++ b/index.html
@@ -5,27 +5,41 @@
 </head>
 <body>
   <div>
-  <h1>Hello World</h1>
+  <h1>Psych Heads</h1>
 
-  <h2>Welcome to my site!</h2>
+  <h2>Psychology as you've never seen it before</h2>
 
-<!-- image of a duck --><img src="duck.jpg" alt=" A duck" width=200px>
+<!-- image of a duck --><img src="brain.jpg" alt=" Logo " width=200px>
 </div>
 <div>
-<p>I am currently learning to code with <a href="https://www.codefirstgirls.org.uk">Code First Girls </a>. Going over everything from how the
-internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
-Everyone should learn to code, here are some pretty good reasons why...</p>
+  <ul>
+    <li>HTML is cool</li>
+    <li id="lower">CSS is cooler</li>
+    <li id="lowest">JS is the best</li>
+  </ul>
+  </div>
+<p> <a href="https://www.bps.org.uk">British Psychological society</a>. </p>
+<main role= "main" class="container">
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="images/co.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/health.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/ed.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/ted.jpg" class="d-block w-100" alt="...">
+    </div>
 
-<ul>
-  <li>HTML is cool</li>
-  <li id="lower">CSS is cooler</li>
-  <li id="lowest">JS is the best</li>
-</ul>
 </div>
-<div class="contrast">
-<h2><em>What do you need to create a website?</em></h2>
 
 
+  <div class="contrast">
+  <h2><em>What do you need to create a website?</em></h2>
 <h3>Not much!</h3>
 <ol>
 <li>A computer (always a good start)</li>
