--- a/index.html
+++ b/index.html
@@ -8,34 +8,25 @@
   <h1>Psych Heads</h1>
 
   <h2>Psychology as you've never seen it before</h2>
-
-<!-- image of a duck --><img src="brain.jpg" alt=" Logo " width=200px>
 </div>
 <div>
   <ul>
-    <li>HTML is cool</li>
-    <li id="lower">CSS is cooler</li>
-    <li id="lowest">JS is the best</li>
+    <li id="lower">Social</li>
+    <li id="lowest">Cognitive</li>
+    <li id="lower">Counselling</li>
   </ul>
-  </div>
-<p> <a href="https://www.bps.org.uk">British Psychological society</a>. </p>
-<main role= "main" class="container">
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="images/co.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images/health.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images/ed.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images/ted.jpg" class="d-block w-100" alt="...">
-    </div>
-
+  <img src="brain.jpg" alt=" Logo " width=200px>
 </div>
+<div>
+  <ul>
+    <li>Health</li>
+    <li id="lower">Education</li>
+    <li id="lowest">Forensic</li>
+  </ul>
+  <p> <a href="https://www.bps.org.uk">British Psychological society</a>. </p>
+  </div>
+  <main role="main" class="container">
+
 
 
   <div class="contrast">
