--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 <body>
   <div>
   <h1>Psych Heads</h1>
+    
+  <ul>
+    <li><a href="default.asp">Home</a></li>
+    <li><a href="recent_research.asp">Recent Research</a></li>
+    <li><a href="fields.asp"> Fields</a></li>
+    <li><a href="careers.asp">Careers</a></li>
+    <li><a href="about.asp">About Us</a></li>
+    <li><a href="contact.asp">Contact</a></li>
+</ul>
 
   <h2>Psychology as you've never seen it before</h2>
 </div>
