--- a/index.html
+++ b/index.html
@@ -37,16 +37,15 @@
   <main role="main" class="container">
 
 
-
-  <div class="contrast">
-  <h2><em>What do you need to create a website?</em></h2>
-<h3>Not much!</h3>
-<ol>
-<li>A computer (always a good start)</li>
-<li>A text editor (I am using atom)</li>
-<li>A web browser (I am using chrome)</li>
-<li>Some HTML, CSS and JS files</li>
+<div class="contrast">
+  <address>
+    <h4> Contact us </h4>
+      <p> 01904 658 945 </p>
+      <p> <a href= "mailto:psycheads@outlook.com"> Email </a></p>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-instagram"></a>
+  </address>
 </div>
-<h4>Follow my progress on <a href="http://www.github.com/"> github </a> </h4>
-</body>
+  </body>
 </html>
