--- a/index.html
+++ b/index.html
@@ -2,29 +2,34 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
+<script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
+
   <div>
   <h1>Psych Heads</h1>
-    
-  <ul>
-    <li><a href="default.asp">Home</a></li>
-    <li><a href="recent_research.asp">Recent Research</a></li>
+
+  <ul class"navigation">
+    <li> <a href="default.asp">Home</a></li>
+    <li><a href="recent_research.asp">Recent</a></li>
     <li><a href="fields.asp"> Fields</a></li>
     <li><a href="careers.asp">Careers</a></li>
-    <li><a href="about.asp">About Us</a></li>
+    <li><a href="about_us/about_us.html">About</a></li>
     <li><a href="contact.asp">Contact</a></li>
 </ul>
 
   <h2>Psychology as you've never seen it before</h2>
 </div>
-<div>
+
+<div class="fields">
   <ul>
     <li id="lower">Social</li>
     <li id="lowest">Cognitive</li>
     <li id="lower">Counselling</li>
   </ul>
-  <img src="brain.jpg" alt=" Logo " width=200px>
+  <img src="images/brain.jpg" alt=" Logo " width=200px>
 </div>
 <div>
   <ul>
@@ -32,6 +37,7 @@
     <li id="lower">Education</li>
     <li id="lowest">Forensic</li>
   </ul>
+
   <p> <a href="https://www.bps.org.uk">British Psychological society</a>. </p>
   </div>
   <main role="main" class="container">
@@ -47,5 +53,6 @@
       <a href="#" class="fa fa-instagram"></a>
   </address>
 </div>
+
   </body>
 </html>
