--- a/about_us.html
+++ b/about_us.html
@@ -15,7 +15,7 @@
   <body>
       <center>
         <h1>PsychHeads</h1>
-        <img src="images/brain.jpg" alt="logo" width=200px>
+        <img src="images/brain.jpg" alt="brain" width=200px>
       </center>
 
   <ul>
