--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-</head>
-<body>
-  <div>
-  <h1>Psych Heads</h1>
-    
+  <html>
+    <head>
+      <title> Home page </title>
+      <script src="js/scripts.js"></script>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+      <style>.carousel-inner > .item > img { width:100%; height:570px; } </style>
+  </head>
+  <body>
+      <center>
+        <h1>PsychHeads</h1>
+
+        <img src="images/brain.jpg" alt="brain" width=200px>
+      </center>
+
+
   <ul>
     <li><a href="default.asp">Home</a></li>
     <li><a href="recent_research.asp">Recent Research</a></li>
@@ -15,37 +28,77 @@
     <li><a href="about.asp">About Us</a></li>
     <li><a href="contact.asp">Contact</a></li>
 </ul>
+<center>
+  <h3> Learn the fields of Psychology	</h3>
+</center>
 
-  <h2>Psychology as you've never seen it before</h2>
+
+<p>
+Lean exciting Psychological theoies and apply your knowledge
+</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-3">
+      Forensic
+    </div>
+    <div class="col-sm-3">
+      Health
+    </div>
+    <div class="col-sm-3">
+      Education
+    </div>
+    <div class="col-sm-3">
+      Clinical
+    </div>
 </div>
-<div>
-  <ul>
-    <li id="lower">Social</li>
-    <li id="lowest">Cognitive</li>
-    <li id="lower">Counselling</li>
-  </ul>
-  <img src="brain.jpg" alt=" Logo " width=200px>
-</div>
-<div>
-  <ul>
-    <li>Health</li>
-    <li id="lower">Education</li>
-    <li id="lowest">Forensic</li>
-  </ul>
-  <p> <a href="https://www.bps.org.uk">British Psychological society</a>. </p>
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/Cog.jpg" class="d-block w-100" alt="First slide">
   </div>
-  <main role="main" class="container">
+  <div class="carousel-item">
+    <img src="images/Forensic.jpg" class="d-block w-100" alt="Second slide">
+  </div>
+  <div class="carousel-item">
+    <img src="images/Health.jpg" class="d-block w-100" alt="Third slide">
+  </div>
+    <div>
+      <img src="images/Social.jpg" class="d-block w-100" alt="Fourth slide">
+    </div>
+</div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
+
+<h3>
+"What you need to learn?""
+</h3>
+<center>
+<img src="Images/Exams.jpg" alt="exams" width=500px>
+</center>
+<p>
+5 GCSE A-C
+3 A levels
+Bachlors Degree in Psychology
+</p>
 
 <div class="contrast">
-  <address>
-    <h4> Contact us </h4>
-      <p> 01904 658 945 </p>
-      <p> <a href= "mailto:psycheads@outlook.com"> Email </a></p>
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-instagram"></a>
-  </address>
+<address>
+<h4> Contact us </h4>
+<p> 01904 658 945 </p>
+<p> <a href= "mailto:psycheads@outlook.com"> Email </a></p>
+<a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-instagram"></a>
+</address>
 </div>
-  </body>
+</body>
 </html>
